--- a/src/assets/scss/_variable.scss
+++ b/src/assets/scss/_variable.scss
@@ -1,3 +1,5 @@
-$montserrat:"Montserrat", sans-serif;
-$black:#000;
-$white:#fff;
+$montserrat: "Montserrat", sans-serif;
+$black: #000;
+$white: #fff;
+$orange: #f15a22;
+$blue: #00acb4;
