--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -8,31 +8,34 @@ body {
   font-weight: 400;
   color: #fff;
   font-family: $montserrat;
-  height: 200vh;
+  height: 100vh;
 }
 
-
-.mt-60{
-    margin-top: 60px;
+.mt-60 {
+  margin-top: 60px;
 }
 
-.mb-60{
-    margin-bottom: 60px;
+.mb-60 {
+  margin-bottom: 60px;
 }
 
-.pt-60{
-    padding-top: 60px;
+.pt-60 {
+  padding-top: 60px;
 }
 
-.pb-60{
-    padding-bottom: 60px;
+.pb-60 {
+  padding-bottom: 60px;
 }
 
 @keyframes blinking {
-  from {opacity: 0.4}
-  to {opacity: 1}
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
-.blinking{
+.blinking {
   animation: blinking 1.5s infinite;
 }
