--- a/src/assets/scss/_style.scss
+++ b/src/assets/scss/_style.scss
@@ -3,10 +3,11 @@
   background-repeat: repeat;
   mix-blend-mode: exclusion;
   padding: 3pc 0;
+  margin-top: 5em;
+
   h1 {
     font-size: 55px;
     font-weight: 700;
-    // opacity: 0.4;
     color: transparent;
     -webkit-text-stroke-color: $orange;
     -webkit-text-stroke-width: 2px;
