final homepage & code refactor

--- a/src/assets/scss/_style.scss
+++ b/src/assets/scss/_style.scss
@@ -3,7 +3,7 @@
   background-repeat: repeat;
   mix-blend-mode: exclusion;
   padding: 3pc 0;
-  margin-top: 5em;
+  margin-top: 3em;
 
   h1 {
     font-size: 55px;
@@ -11,5 +11,11 @@
     color: transparent;
     -webkit-text-stroke-color: $orange;
     -webkit-text-stroke-width: 2px;
+  }
+}
+
+@media (max-width: 824px) {
+  .geek-room-chapter h1 {
+    font-size: 35px;
   }
 }
