--- a/src/components/faqs/faqStyle.css
+++ b/src/components/faqs/faqStyle.css
@@ -23,12 +23,10 @@
 .accordion .item .accordion-header button {
   background-color: rgba(0, 0, 0, 0.123);
   color: #fff;
-  /* background-color: rgb(206, 204, 204); */
   box-shadow: none;
   font-size: 1rem;
   letter-spacing: 0.125rem;
   line-height: 1.375rem;
-  /* color: black; */
   font-weight: 700;
   vertical-align: middle;
   position: relative;
@@ -39,7 +37,6 @@
 
 .accordion-button::after {
   content: "";
-  /* background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="%23fff" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M1.5 3a.5.5 0 0 1 .5-.5h12a.5.5 0 0 1 .5.5v10a.5.5 0 0 1-.5.5h-12a.5.5 0 0 1-.5-.5V3zm13 0H1.5v10H14.5V3zm-6 1.5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0v-6zM4.5 6.5a.5.5 0 0 1 1 0v1a.5.5 0 0 1-1 0v-1zm5 1a.5.5 0 0 0-.5-.5H8v1h1a.5.5 0 0 0 .5-.5zm1 1a.5.5 0 0 1-.5.5H9v-1h1a.5.5 0 0 1 .5.5z"/></svg>') no-repeat center; */
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
   transform: rotate(90deg);
   width: 1.5em;
@@ -79,8 +76,8 @@
   position: absolute;
   left: 0;
   right: 0;
-  bottom: -2px; /* Adjust this value based on your desired distance from the text */
-  height: 2px; /* Adjust this value based on your desired underline thickness */
+  bottom: -2px;
+  height: 2px;
   background: linear-gradient(90deg, #00acb4, #f15a22);
-  z-index: -1; /* Ensure the underline appears behind the text */
+  z-index: -1;
 }
