--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -4,6 +4,7 @@ html {
 
 body {
   background-image: url("../images/background/main-bg.png");
+  background-repeat: no-repeat;
   background-size: cover;
   font-weight: 400;
   color: #fff;
