--- a/src/components/hero/app.css
+++ b/src/components/hero/app.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 /* #img {
   padding-top: 10px;
   padding-left: 10px;
@@ -35,6 +37,21 @@
   justify-content: center;
   align-items: center;
   padding: 20px;
+}
+
+.font-bold{
+  font-family: "Sora", sans-serif;
+  font-optical-sizing: auto;
+}
+.text-blue-400 {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 800;
+}
+
+.py-8{
+  font-family: "Sora", sans-serif;
+  font-optical-sizing: auto;
 }
 
 @media (min-width: 768px) {
