--- a/src/components/hero/app.css
+++ b/src/components/hero/app.css
@@ -57,6 +57,6 @@
 @media (min-width: 768px) {
   .left-column {
     background: url("../../assets/images/bg_img.png") no-repeat center center;
-    background-size: cover;
+    background-size: contain;
   }
 }
