--- a/src/components/achievements/index.module.css
+++ b/src/components/achievements/index.module.css
@@ -70,7 +70,11 @@
   justify-content: center;
   padding: 1rem;
   box-sizing: border-box;
-  background: rgba(255, 255, 255, 0.3);
+  /* background: rgba(255, 255, 255, 0.3); */
+  background-image: url("/achievements_page/achievement-bg.webp");
+  background-size: 320px 260px;
+  background-repeat: no-repeat;
+  filter: grayscale(30%);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(3.5px);
   -webkit-backdrop-filter: blur(3.5px);
