--- a/src/components/achievements/index.module.css
+++ b/src/components/achievements/index.module.css
@@ -109,6 +109,32 @@
   font-size: 1rem;
 }
 
+
+@keyframes fadeInUp {
+  to {
+    opacity: 1;
+    transform: translateY(0); 
+  }
+}
+
+
+
+.heading {
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  margin-top: 20px; 
+  font-size: 3rem; 
+  color: white; 
+  transition: transform 0.3s ease, color 0.3s ease; 
+}
+
+.heading:hover {
+  transform: translateY(-10px) scale(1.1); 
+  color: #00ff75; 
+}
+
+
 @media (max-width: 1300px) {
   .content {
     width: 70%;
