added card and navbar update

--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -6,6 +6,7 @@ body {
   background-image: url("../images/background/main-bg.png");
   background-repeat: no-repeat;
   background-size: cover;
+  padding-top: 85px;
   font-weight: 400;
   color: #fff;
   font-family: $montserrat;
